# lm-benchmark

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml  summary.md
.tmp/: mimo-v2.5-config.json
configs/: benchmarks.yaml  hardware.yaml  models.yaml  quantization.yaml  run_baseline_vs_nvfp4.yaml  run_mimo_v2_5_nvfp4.yaml  run_smoke.yaml
docs/: HANDOFF.md  PRD.md  architecture.md  b300_setup.md  nvfp4_workflow.md  troubleshooting.md
docs/published_baselines/: mimo_v2_5.md
src/lmbench/: __init__.py  cli.py
src/lmbench/bench/: __init__.py  metrics.py  perf.py  quality.py  workloads.py
src/lmbench/compare/: __init__.py  differ.py  offline.py  stats.py
src/lmbench/config/: __init__.py  loader.py  resolver.py  schema.py
src/lmbench/quantize/: __init__.py  calibration.py  modelopt_nvfp4.py  verify.py
src/lmbench/report/: __init__.py  html.py  markdown.py
src/lmbench/runner/: __init__.py  env.py  pipeline.py
src/lmbench/serve/: __init__.py  lifecycle.py  vllm_offline.py  vllm_server.py
src/lmbench/utils/: __init__.py  gpu.py
tests/: conftest.py
tests/integration/: __init__.py  test_serve_smoke.py
tests/unit/: test_calibration.py  test_cli.py  test_compare_and_report.py  test_config_loader.py  test_config_resolver.py  test_config_schema.py  test_gpu_sampler.py  test_metrics.py  test_perf.py  test_quality.py  test_quantize_config.py  test_runner.py  test_serve_args.py  test_serve_health.py  test_serve_lifecycle.py  test_serve_offline.py  test_verify.py  test_workloads.py
